--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,41 +1,40 @@
-name: Docker CI/CD
-
+name: Build and release Docker images
 on:
   push:
+    branches-ignore:
+      - '**'
     tags:
-      - "v*.*.*"
+      - 'v*.*.*'
 
 jobs:
-  build-and-publish:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - uses: actions/checkout@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          fetch-depth: 1
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+      - name: Build Docker image
+        uses: flownative/action-docker-build@master
         with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/docker-semver:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/docker-semver:${{ github.ref_name }}
+          tag_ref: ${{ github.ref }}
+          image_name: flownative/docker-base/base
+          registry_password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Docker Publish SemVer Tags
-        uses: flownative/action-docker-publish-semver@v1.2.0
+      - name: Publish release to docker.io
+        uses: flownative/action-docker-publish-semver@master
         with:
-          tag_latest: true
-          source_registry_endpoint: https://index.docker.io/v1/
+          tag_ref: ${{ github.ref }}
+          tag_latest: 'yes'
+          tag_custom: 'some-custom-tag'
+
+          source_image_name: docker.pkg.github.com/flownative/docker-base/base
+          source_registry_username: github
+          source_registry_password: ${{ secrets.GITHUB_TOKEN }}
+          source_registry_endpoint: https://docker.pkg.github.com/v2/
+
+          target_image_name: flownative/base
+          target_registry_username: ${{ secrets.DOCKER_IO_REGISTRY_USER }}
+          target_registry_password: ${{ secrets.DOCKER_IO_REGISTRY_PASSWORD }}
           target_registry_endpoint: https://index.docker.io/v1/
-          source_registry_username: ${{ secrets.DOCKERHUB_USERNAME }}
-          source_registry_password: ${{ secrets.DOCKERHUB_TOKEN }}
-          source_image_name: ${{ secrets.DOCKERHUB_USERNAME }}/docker-semver
-          target_registry_username: ${{ secrets.DOCKERHUB_USERNAME }}
-          target_registry_password: ${{ secrets.DOCKERHUB_TOKEN }}
-          target_image_name: ${{ secrets.DOCKERHUB_USERNAME }}/docker-semver
