--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,40 +1,22 @@
-name: Build and release Docker images
+name: gitops-autover
+
 on:
   push:
-    branches-ignore:
-      - '**'
-    tags:
-      - 'v*.*.*'
+    branches:
+    - main
 
 jobs:
-  build:
+  use-action:
+    name: Verify GitOps AutoVer Action
     runs-on: ubuntu-latest
     steps:
-
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-
-      - name: Build Docker image
-        uses: flownative/action-docker-build@master
-        with:
-          tag_ref: ${{ github.ref }}
-          image_name: flownative/docker-base/base
-          registry_password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Publish release to docker.io
-        uses: flownative/action-docker-publish-semver@master
-        with:
-          tag_ref: ${{ github.ref }}
-          tag_latest: 'yes'
-          tag_custom: 'some-custom-tag'
-
-          source_image_name: docker.pkg.github.com/flownative/docker-base/base
-          source_registry_username: github
-          source_registry_password: ${{ secrets.GITHUB_TOKEN }}
-          source_registry_endpoint: https://docker.pkg.github.com/v2/
-
-          target_image_name: flownative/base
-          target_registry_username: ${{ secrets.DOCKER_IO_REGISTRY_USER }}
-          target_registry_password: ${{ secrets.DOCKER_IO_REGISTRY_PASSWORD }}
-          target_registry_endpoint: https://index.docker.io/v1/
+    - uses: actions/checkout@v3
+    - name: Run GitOps Automatic Versioning Action
+      id: gitops-autover
+      uses: AlexAtkinson/github-action-gitops-autover@0.3.1
+    - name: Verify Outputs
+      run: |
+        NEW_VERSION=${{ steps.gitops-autover.outputs.new-version }}
+        echo "new-version: $NEW_VERSION"
+        PREVIOUS_VERSION=${{ steps.gitops-autover.outputs.previous-version }}
+        echo "previous-version: $PREVIOUS_VERSION"
