--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,22 +1,46 @@
-name: gitops-autover
+name: ci
 
 on:
   push:
     branches:
-    - main
+      - 'master'
+    tags:
+      - 'v*'
+  pull_request:
+    branches:
+      - 'master'
 
 jobs:
-  use-action:
-    name: Verify GitOps AutoVer Action
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Run GitOps Automatic Versioning Action
-      id: gitops-autover
-      uses: AlexAtkinson/github-action-gitops-autover@0.3.1
-    - name: Verify Outputs
-      run: |
-        NEW_VERSION=${{ steps.gitops-autover.outputs.new-version }}
-        echo "new-version: $NEW_VERSION"
-        PREVIOUS_VERSION=${{ steps.gitops-autover.outputs.previous-version }}
-        echo "previous-version: $PREVIOUS_VERSION"
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            name/app
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+      -
+        name: Login to DockerHub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
