--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            name/app
+            laurawada/dockersemver
           tags: |
             type=ref,event=branch
             type=ref,event=pr
